--- a/jdbcTest/.settings/org.eclipse.core.resources.prefs
+++ b/jdbcTest/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//res/dbinfo.properties=UTF-8
+encoding//src/kr/or/ddit/util=UTF-8
+encoding//src/kr/or/ddit/util/dbinfo.properties=UTF-8
